add logback-spring.xml file to learn about logback logging